--- a/FizzBuzz/Base.lproj/Main.storyboard
+++ b/FizzBuzz/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -43,37 +44,36 @@
                                 <color key="textColor" red="1" green="1" blue="0.82352941176470584" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JRi-Uo-yMm">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EhK-Vv-Qz9">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="DvJ-bH-fqc">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p7D-e3-uRC">
+                                <rect key="frame" x="56" y="202" width="263" height="263"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x0e-mM-N5G">
+                                        <rect key="frame" x="0.0" y="0.0" width="126" height="126"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="70"/>
+                                        <state key="normal" title="0" backgroundImage="button_border">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="x0e-mM-N5G" firstAttribute="leading" secondItem="p7D-e3-uRC" secondAttribute="leading" id="My1-La-gTf"/>
+                                    <constraint firstItem="x0e-mM-N5G" firstAttribute="height" secondItem="p7D-e3-uRC" secondAttribute="height" multiplier="0.48" id="Xve-44-byT"/>
+                                    <constraint firstItem="x0e-mM-N5G" firstAttribute="top" secondItem="p7D-e3-uRC" secondAttribute="top" id="adu-wf-Ceg"/>
+                                    <constraint firstItem="x0e-mM-N5G" firstAttribute="width" secondItem="p7D-e3-uRC" secondAttribute="width" multiplier="0.48" id="aiG-2H-m69"/>
+                                    <constraint firstAttribute="width" secondItem="p7D-e3-uRC" secondAttribute="height" multiplier="1:1" id="tgS-6N-qXH"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.6588235294117647" green="0.84705882352941175" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="LLV-Um-O1z" secondAttribute="trailing" constant="19" id="3aa-UR-5Ct"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LLV-Um-O1z" secondAttribute="bottom" constant="41" id="3ko-gg-Qyr"/>
-                            <constraint firstItem="JRi-Uo-yMm" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:1" id="DYu-Is-i8b"/>
+                            <constraint firstItem="p7D-e3-uRC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AJE-J2-BiF"/>
+                            <constraint firstItem="p7D-e3-uRC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="G4f-AA-BOZ"/>
                             <constraint firstItem="iMv-xb-yN5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="OHV-Oa-J3W"/>
-                            <constraint firstItem="JRi-Uo-yMm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XJQ-w7-d3E"/>
-                            <constraint firstItem="JRi-Uo-yMm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="aHc-ae-bAt"/>
-                            <constraint firstItem="JRi-Uo-yMm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="40" id="exL-JC-owP"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JRi-Uo-yMm" secondAttribute="trailing" constant="40" id="wUT-Ig-fFw"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p7D-e3-uRC" secondAttribute="trailing" constant="40" id="Wf0-P3-99e"/>
+                            <constraint firstItem="p7D-e3-uRC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="d9Z-sM-vgE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="iMv-xb-yN5" secondAttribute="trailing" constant="9" id="yMk-AZ-bGu"/>
                         </constraints>
                     </view>
@@ -83,4 +83,7 @@
             <point key="canvasLocation" x="-308" y="99.400299850074973"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="button_border" width="400" height="400"/>
+    </resources>
 </document>
